--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "monitoring"]
 	path = monitoring
-	url = https://github.com/Sora-mmh/monitoring-with-prometheus-p.git
+	url = https://github.com/Sora-mmh/monitoring.git
